--- a/angularapp1/src/index.html
+++ b/angularapp1/src/index.html
@@ -9,6 +9,11 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+<style>
+  * {
+    margin: 0;
+  }
+</style>
 <body class="mat-typography">
   <app-root></app-root>
 </body>
